# synth

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  flake.nix
shaders/: audio.comp
src/: main.rs
src/app/: app.rs  cpal_wrapper.rs  mod.rs
